Finished writing tests for the MyLinkedList implementation.